Edit some technical terms

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,6 @@
     "\n",
     "def reconstruct(model, x):\n",
     "    \"\"\"\n",
-    "    [Q2.1: VAE – reconstruct function]\n",
     "\n",
     "    Reconstructs input x using the VAE.\n",
     "\n",
@@ -181,9 +180,8 @@
     "\n",
     "def elbo(x_recon, x, mu, logvar):\n",
     "    \"\"\"\n",
-    "    [Q2.2b: VAE – ELBO loss]\n",
     "\n",
-    "    Computes the Evidence Lower Bound (ELBO) loss\n",
+    "    Computes the Negative Evidence Lower Bound (NELBO) loss\n",
     "\n",
     "    Args:\n",
     "      x_recon: reconstructed input.\n",
@@ -196,14 +194,14 @@
     "    \"\"\"\n",
     "\n",
     "    # KL divergence term, analytically computable for Gaussian distributions\n",
-    "    kl_div = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    kl_div = 0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
     "\n",
     "    # Estimating the second term in NELBO, only using one sample in the MC estimate, notice no need to include alot of extra terms this second term from the NELBO since they don't affect the gradient due to being constant.\n",
     "    recon_loss = F.mse_loss(x_recon, x.view(-1, 784), reduction='sum')\n",
     "\n",
     "\n",
     "    # Total NELBO loss\n",
-    "    total_loss = recon_loss + kl_div\n",
+    "    total_loss = recon_loss - kl_div\n",
     "\n",
     "    return total_loss\n",
     "\n",
@@ -267,7 +265,6 @@
     "\n",
     "def reconstruct_cvae(model, x, y):\n",
     "    \"\"\"\n",
-    "    [Q3c.1: CVAE – reconstruct function]\n",
     "    \n",
     "    Reconstructs input x conditioned on label y using the CVAE.\n",
     "    \n",
@@ -290,9 +287,8 @@
     "\n",
     "def celbo(x_recon, x, mu, logvar):\n",
     "    \"\"\"\n",
-    "    [Q3c.2: CVAE – CELBO loss]\n",
     "    \n",
-    "    Computes the Conditional ELBO (CELBO) loss\n",
+    "    Computes the Negative Conditional ELBO (NCELBO) loss\n",
     "    \n",
     "    Args:\n",
     "      x_recon: reconstructed input.\n",
@@ -304,20 +300,19 @@
     "      Total loss (scalar).\n",
     "    \"\"\"\n",
     "    # KL divergence term is the same as in VAE\n",
-    "    kl_div = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    kl_div = 0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
     "    \n",
     "    # Reconstruction loss (based on conditional log-likelihood) removal of terms that do not affect the gradient and one sample in the MC estimate\n",
     "    recon_loss = F.mse_loss(x_recon, x.view(-1, 784), reduction='sum')\n",
     "    \n",
     "    # Total CELBO loss (negative ELBO to minimize)\n",
-    "    total_loss = recon_loss + kl_div\n",
+    "    total_loss = recon_loss - kl_div\n",
     "    \n",
     "    return total_loss\n",
     "\n",
     "\n",
     "def train_mnist_cvae(model, train_loader, optimizer, device, epochs=10):\n",
     "    \"\"\"\n",
-    "    [Q6c.3: CVAE – train_mnist_cvae function]\n",
     "    \n",
     "    Trains the CVAE on MNIST.\n",
     "    \n",
@@ -416,7 +411,6 @@
     "\n",
     "def visualize_cvae_generation(model, digit_class, n_samples, device):\n",
     "    \"\"\"\n",
-    "    [Q6d: CVAE – Visualizing Generated Samples]\n",
     "\n",
     "    Uses the trained CVAE to generate samples for a given MNIST digit.\n",
     "\n",
