--- a/CVAE_main.ipynb
+++ b/CVAE_main.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "\n",
     "###############################################################################\n",
-    "# Section 2: VAE Implementation (25 marks)\n",
+    "#  VAE Implementation\n",
     "###############################################################################\n",
     "\n",
     "class VAE(nn.Module):\n",
@@ -113,8 +113,8 @@
     "        # hidden_dim = 400 is a common choice for MNIST\n",
     "        # latent_dim = 20 is a common choice for the latent space\n",
     "\n",
-    "        #Tensors in pytorch are similar to numpy arrays, but they have 5 importanrt features:\n",
-    "        # 1. They can be used on GPU, which is much faster than CPU.\n",
+    "        #Tensors in pytorch are objects that store arrays which some special features:\n",
+    "        # 1. They can be used on GPU, which is much faster than CPU. This is unlike regular python and numpy which runs on the CPU\n",
     "\n",
     "        # 2. They can be used to define a computation graph, which is used for backpropagation. So gradient computation is automatic.\n",
     "\n",
@@ -259,7 +259,7 @@
     "\n",
     "\n",
     "###############################################################################\n",
-    "# Section 3: CVAE Implementation (30 marks)\n",
+    "# CVAE Implementation\n",
     "###############################################################################\n",
     "\n",
     "\n",
@@ -421,7 +421,6 @@
     "      device: computation device.\n",
     "    \"\"\"\n",
     "\n",
-    "    ### DO NOT MODIFY BELOW THIS FUNCTION ###\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        # Create one-hot encoded labels for the given digit.\n",
@@ -497,12 +496,12 @@
     "if __name__ == \"__main__\":\n",
     "    # Set up device and MNIST data loader.\n",
     "    device = torch.device(\"cpu\")\n",
+    "\n",
     "    transform = transforms.Compose([transforms.ToTensor()])\n",
     "    train_dataset = datasets.MNIST('./data', train=True, download=True, transform=transform)\n",
     "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
     "\n",
     "    #Run tests\n",
-    "\n",
     "    test_vae_reconstruct_and_elbo()\n",
     "    test_cvae_reconstruct_and_celbo()\n",
     "\n",
